<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LiveApp</string>
    <string name="input_username">请输入用户名(4–24位数字和字母)</string>
    <string name="input_password">请输入密码(8–16位)</string>
    <string name="login_text">登录</string>
    <string name="register_text">注册</string>
    <string name="step_into_register">没有账号？去注册</string>
    <string name="str_cannot_null">账号和密码不能为空</string>
    <string name="str_hint_password">密码长度为8~16个字符</string>
    <string name="str_hint_account">用户名为4~24个字符，不能为纯数字</string>
    <string name="register_failed">注册失败</string>
    <string name="register_success">注册成功</string>
    <string name="login_failed">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="set_personal_data">编辑资料</string>
    <string name="logout">退出登录</string>
    <string name="set_live_cover">设置封面</string>
    <string name="set_live_title">请输入直播标题</string>
    <string name="set_live_resolving_power">设置分辨率</string>
    <string name="str_dt_hd2">1280*720</string>
    <string name="str_dt_hd">960*540</string>
    <string name="str_dt_sd2">640*480</string>
    <string name="str_dt_sd">640*368</string>
    <string name="str_dt_ld2">480*360</string>
    <string name="str_dt_ld">320*240</string>
    <string name="start_live">开始直播</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="must_select_cover">请设置封面</string>
    <string name="must_set_title">请设置标题</string>
    <string name="request_time_out">请求超时</string>
    <string name="connect_time_out">网络连接超时</string>
    <string name="internet_error">网络异常</string>
    <string name="url_not_exist">请求的地址不存在</string>
    <string name="request_failed">请求失败</string>
    <string name="domain_name_resolution_failed">域名解析失败</string>
    <string name="take_photo">拍照</string>
    <string name="choose_in_album">从手机相册选择</string>

</resources>
