<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_gray"
    tools:context="com.example.iLive.liveapp.view.CreateLiveActivity">

    <ImageView
        android:id="@+id/set_live_cover"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:background="@drawable/ic_launcher_background"/>

    <LinearLayout
        android:id="@+id/set_cover_btn"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:background="@color/clr_translucent_gray"
        android:orientation="vertical">
        <ImageView

            android:id="@+id/set_cover_ico"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/img" />

        <TextView
            android:id="@+id/set_cover_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_live_cover"
            android:textColor="@color/color_text_gray"/>

    </LinearLayout>

    <EditText
        android:id="@+id/set_live_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_input_white_angle"
        app:layout_constraintTop_toBottomOf="@id/set_live_cover"
        android:hint="@string/set_live_title"
        android:textColorHint="@color/color_text_gray"
        android:textSize="15sp"
        android:textColor="@color/clr_dark"
        android:paddingLeft="10dp"/>

    <ImageButton
        android:id="@+id/set_live_role"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@id/set_live_title"
        android:background="@drawable/btn_white_angle_bg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/set_live_role"
        app:layout_constraintBottom_toBottomOf="@id/set_live_role"
        app:layout_constraintStart_toStartOf="@id/set_live_role"
        android:layout_marginLeft="10dp"
        android:text="@string/set_live_resolving_power"
        android:textColor="@color/clr_dark"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/selected_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/set_live_role"
        app:layout_constraintBottom_toBottomOf="@id/set_live_role"
        app:layout_constraintRight_toRightOf="@id/set_live_role"
        android:layout_marginRight="35dp"
        style="@style/text_style"/>

    <ImageView
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:layout_constraintTop_toTopOf="@id/set_live_role"
        app:layout_constraintBottom_toBottomOf="@id/set_live_role"
        app:layout_constraintEnd_toEndOf="@id/set_live_role"
        android:layout_marginRight="0dp"
        android:src="@drawable/next"/>

    <Button
        android:id="@+id/live_start_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/btn_yellow_angle_bg"
        android:text="@string/start_live"
        android:textSize="18sp"
        android:textColor="@color/clr_white"/>

</android.support.constraint.ConstraintLayout>
